--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,3 +15,9 @@ regex = "1.10.5"
 bytes = "1.6.1"
 hyper = "1.4.1"
 lazy_static = "1.5.0"
+
+[profile.dev]
+opt-level = 0
+
+[profile.release]
+opt-level = 3
