--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "rust-get-proxy-request"
-version = "0.1.0"
+version = "0.1.1"
 edition = "2021"
 
 [profile.dev]
@@ -10,14 +10,14 @@ opt-level = 0
 opt-level = 3
 
 [dependencies]
-chrono = "0.4.38"
-warp = "0.3.7"
-reqwest = { version = "0.12.5",features = ["blocking"] }
-tokio = { version = "1.38.0", features = ["full"] }
-urlencoding = "2.1.3"
-serde_json = "1.0.120"
-serde = { version = "1.0.204", features = ["derive"] }
-regex = "1.10.5"
-bytes = "1.6.1"
-hyper = "1.4.1"
-lazy_static = "1.5.0"
+chrono = "=0.4.40"
+warp = "=0.3.7"
+reqwest = { version = "=0.12.15",features = ["blocking"] }
+tokio = { version = "=1.44.1", features = ["full"] }
+urlencoding = "=2.1.3"
+serde_json = "=1.0.140"
+serde = { version = "=1.0.219", features = ["derive"] }
+regex = "=1.11.1"
+bytes = "=1.10.1"
+hyper = "=1.6.0"
+lazy_static = "=1.5.0"
